tests/cases/scc/error/0012-ifnoexpr.c.res
./tests/cases/scc/error/0012-ifnoexpr.c:2:4:	error:   expected an expression.
exit code 1
